created contact form page and some fix in header mobile

--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -80,30 +80,7 @@
         </div>
     </main>
     <footer>
-        <button class="form-button" popovertarget="contact-form">Contact me!</button>
-        <div class="form-container" popover id="contact-form">
-            <div class="overlay">
-                <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="3f37e47b-4de8-40a5-89a6-174d0c4d1606">
-                    <button class="close-form"><a>X</a></button>
-                    <div class="name-container">
-                        <label for="name">Your Name:</label>
-                        <input name="name" type="text" id="name" placeholder="Enter Your Name:" required>
-                    </div>
-                    <div class="email-container">
-                        <label for="email">Email:</label>
-                        <input name="email" type="email" id="email" placeholder="Enter Your Email:" required>
-                    </div>
-                    <div class="message-container">
-                        <label for="message">Message:</label>
-                        <textarea name="message" rows="3" id="message" placeholder="Enter Your Messege:" required></textarea>
-                       
-                    </div>
-                    <input type="hidden" name="redirect" value="https://web3forms.com/success">         
-                    <input name="send-button" class="send" type="submit" value="Send">
-                </form>
-            </div>
-        </div>
+        <button class="form-button"><a href="../Contact/">Contact me!</a></button>
     </footer>
 </body>
 </html>
