--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 <body>
     <header>
         <div class="hamburger-menu">
-            <img class="hamburger" src="assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu-icon">
+            <img class="hamburger" src="assets/icons/hamburger-menu.svg" alt="hamburger-menu" title="hamburger-menu icon">
             <div class="home-container">
                 <a>
-                    <img src="assets/icons/home.svg" alt="home" title="home-icon">
+                    <img src="assets/icons/home.svg" alt="home" title="home icon">
                 </a>
             </div>
             <p class="journey"><a href="My_Journey/">My Journey</a></p>
             <p class="bio"> <a href="About_me/">About me</a></p>
             <div class="social">
                 <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                    <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook-logo" >
+                    <img src="assets/images/facebook-logo.webp" alt="facebook" class="facebook" title="facebook logo" >
                 </a>
                 <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                    <img src="assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram-logo">
+                    <img src="assets/images/instagram-logo.webp" alt="istagram" class="insta" title="instagram logo">
                 </a>
             </div>
             <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -55,24 +55,24 @@
         <section class="full-name">
             <h1><span class="name">Thomas</span><br><span class="second-name">Ernesto</span><br>
                 <span class="lastname">Ginder</span></h1>
-            <img src="assets/images/close-up-photo.jpg" alt="close-up-photo" title="close-up">
+            <img src="assets/images/close-up-photo.jpg" alt="close-up-photo" title="close up">
         </section>
         <section class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
-            <img src="assets/images/kinder.png" alt="kinder" title="kinder-icon">
+            <img src="assets/images/kinder.png" alt="kinder" title="kinder icon">
         </section>
         <section class="other-pages">
             <div class="mirror-journey">
                 <a href="My_Journey/">
-                    <img src="assets/images/sh-journey-m.PNG" alt="screenshot-journey-mobile" title="screenshot journey mobile" class="journey-m">
-                    <img src="assets/images/sh-journey-d.PNG" alt="screenshot-journey-desktop" title="screenshot journey desktop" class="journey-d">
+                    <img src="assets/images/sh-journey-m.PNG" alt="journey-mobile" title="journey mobile" class="journey-m">
+                    <img src="assets/images/sh-journey-d.PNG" alt="journey-desktop" title="journey desktop" class="journey-d">
                     <h3>My Journey</h3>
                 </a>
             </div>
             <div class="mirror-about-me">
                 <a href="About_me/">
-                    <img src="assets/images/sh-about-me-m.PNG" alt="screenshot-about-me-mobile" title="screenshot about me mobile" class="about-me-m">
-                    <img src="assets/images/sh-about-me-d.PNG" alt="screenshot-about-me-desktop" title="screenshot about me desktop" class="about-me-d"> 
+                    <img src="assets/images/sh-about-me-m.PNG" alt="about-me-mobile" title="about me mobile" class="about-me-m">
+                    <img src="assets/images/sh-about-me-d.PNG" alt="about-me-desktop" title="about me desktop" class="about-me-d"> 
                     <h3>About Me</h3> 
                 </a>
             </div>
@@ -107,30 +107,7 @@
         </p>
     </div>
     <footer>
-        <button class="form-button" popovertarget="contact-form">Contact me!</button>
-        <div class="form-container" popover id="contact-form">
-            <div class="overlay">
-                <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="3f37e47b-4de8-40a5-89a6-174d0c4d1606">
-                    <button class="close-form"><a>X</a></button>
-                    <div class="name-container">
-                        <label for="name">Your Name:</label>
-                        <input name="name" type="text" id="name" placeholder="Enter Your Name:" required>
-                    </div>
-                    <div class="email-container">
-                        <label for="email">Email:</label>
-                        <input name="email" type="email" id="email" placeholder="Enter Your Email:" required>
-                    </div>
-                    <div class="message-container">
-                        <label for="message">Message:</label>
-                        <textarea name="message" rows="3" id="message" placeholder="Enter Your Messege:" required></textarea>
-                       
-                    </div>
-                    <input type="hidden" name="redirect" value="https://web3forms.com/success">         
-                    <input name="send-button" class="send" type="submit" value="Send">
-                </form>
-            </div>
-        </div>
+        <button class="form-button"><a href="../Contact/">Contact me!</a></button>
     </footer>
 </body>
 </html>
