fix meta in contact form page

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="../assets/css/contact-form.css">
     <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Icons Mentions">
-    <meta property="og:description" content="This is my webpage for all icons mentions on the about me page">
-    <meta name="description" content="This is my webpage for all icons mentions on the about me page">
-    <meta name="keywords" content="icons,mentions,by,portfolio,Thomas,Ernesto,Ginder">
+    <meta property="og:title" content="Contact Form">
+    <meta property="og:description" content="This is my webpage for you to contact me">
+    <meta name="description" content="This is my webpage for you to contact me">
+    <meta name="keywords" content="form,Email,portfolio,Thomas,Ernesto,Ginder">
     <meta name="robots" content="noindex">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
