footer in homepage

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </p>
     </div>
     <footer>
-        <button class="form-button"><a href="../Contact/">Contact me!</a></button>
+        <button class="form-button"><a href="/Contact/">Contact me!</a></button>
     </footer>
 </body>
 </html>
