--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
     <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <meta property="og:url" content="https://www.TEGportfolio.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
     <meta property="og:image" content="assets/images/my-photo.jpg">
