--- a/About_me/index.html
+++ b/About_me/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icons/site-icon.ico" type="image/x-icon">
     <meta property="og:image" content="../assets/images/my-photo.jpg">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Welcome to my biography webpage, here you can find more info about myself and
