--- a/Contact/index.html
+++ b/Contact/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/contact-form.css">
-    <link rel="icon" href="../assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icons/site-icon.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Contact Form">
     <meta property="og:description" content="This is my webpage for you to contact me">
