--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
-    <link rel="icon" href="/assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/icons/site-icon.ico" type="image/x-icon">
     <meta property="og:url" content="https://www.TEGportfolio.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
-    <meta property="og:image" content="https://assets/images/my-photo.jpg">
+    <meta property="og:image" content="/assets/images/site-image.png">
     <meta property="og:description" content="Welcome to my portfolio website! Here, you can explore my 
     past projects, skills, and experience. I'm a highly motivated and detail-oriented professional
      with a passion for delivering high-quality work.">
