--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
-    <link rel="icon" href="/assets/icons/site-icon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/icons/site-icon.ico" type="image/x-icon">
     <meta property="og:url" content="https://www.TEGportfolio.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
