--- a/Mentions/index.html
+++ b/Mentions/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/mentions.css">
-    <link rel="icon" href="../assets/icons/site-icon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icons/icon-site.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Icons Mentions">
     <meta property="og:description" content="This is my webpage for all icons mentions on the about me page">
