--- a/My_Journey/index.html
+++ b/My_Journey/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/journey.css">
-    <link rel="icon" href="../assets/icons/site-icon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icons/icon-site.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:image" content="../assets/images/my-photo.jpg">
     <meta property="og:description" content="Welcome to my coding journey!! Here you can read about all my experiences from my school 
