--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home-page.css">
-    <link rel="icon" href="./assets/icons/site-icon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/icons/icon-site.ico" type="image/x-icon">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Thomas Ernesto Ginder Portfolio">
     <meta property="og:image" content="https://freeend00.github.io/FirstStart2ImpactProject/assets/images/site-image.png">
