fix responsive images and resolution in homepage mirror-page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a href="About_me/">
                     <img src="assets/images/sh-about-me-m.PNG" alt="about-me-mobile" title="about me mobile" class="about-me-m">
                     <img src="assets/images/sh-about-me-d.PNG" alt="about-me-desktop" title="about me desktop" class="about-me-d"> 
-                    <h3>About</h3> 
+                    <h3>About Me</h3> 
                 </a>
             </div>
         </section>
